--- a/src/app/lib/components/public/footer/footer.component.html
+++ b/src/app/lib/components/public/footer/footer.component.html
@@ -148,7 +148,7 @@
   <!-- Bottom Section - Kept as requested -->
   <section class="bg-gray-800 text-white py-6 ">
     <div class="container mx-auto px-8 text-center md:text-left flex flex-col md:flex-row justify-between items-center">
-      <p class="text-sm mb-4 md:mb-0">&copy; 2025 Your Company. All Rights Reserved.</p>
+      <p class="text-sm mb-4 md:mb-0">&copy; 2025 WPC Energy Ghana. All Rights Reserved.</p>
       <div class="flex flex-wrap justify-center gap-x-4 gap-y-2">
         <a href="#" class="text-sm hover:text-gray-400 transition">Privacy Policy</a>
         <a href="#" class="text-sm hover:text-gray-400 transition">Terms of Service</a>
