--- a/src/app/lib/components/public/footer/footer.component.html
+++ b/src/app/lib/components/public/footer/footer.component.html
@@ -8,7 +8,9 @@
 
 
         <div class="text-start md:text-left">
-          <img src="wpcworld.png" alt="wpcenerg" class="w-1/2 mb-4" />
+          <a href="/">
+          <img src="wpcworld.png" alt="wpcenergy" class="w-1/2 mb-4" />
+          </a>
 
           <h3 class="text-xl font-semibold mb-4">Follow Us</h3>
 
@@ -68,11 +70,12 @@
             <p>P.O. Box CT 10276, Cantoments, Accra </p>
             <p>
               Email:
-              <span className="text-[#F36E23] hover:underline">
-                <a href="mailto:secretariat@wpcenergyghana.org">
+              <span>
+                <a href="mailto:secretariat@wpcenergyghana.org" class="text-[#F36E23] hover:underline">
                   secretariat&#64;wpcenergyghana.org
                 </a>
               </span>
+              
             </p>
             <!-- <p>Phone: (123) 456-7890</p> -->
           </address>
@@ -150,9 +153,9 @@
     <div class="container mx-auto px-8 text-center md:text-left flex flex-col md:flex-row justify-between items-center">
       <p class="text-sm mb-4 md:mb-0">&copy; 2025 WPC Energy Ghana. All Rights Reserved.</p>
       <div class="flex flex-wrap justify-center gap-x-4 gap-y-2">
-        <a href="#" class="text-sm hover:text-gray-400 transition">Privacy Policy</a>
-        <a href="#" class="text-sm hover:text-gray-400 transition">Terms of Service</a>
-        <a href="#" class="text-sm hover:text-gray-400 transition">Contact</a>
+        <a href="/privacy" class="text-sm hover:text-gray-400 transition">Privacy Policy</a>
+        <a href="/terms-and-conditions" class="text-sm hover:text-gray-400 transition">Terms of Service</a>
+        <a href="/contact" class="text-sm hover:text-gray-400 transition">Contact</a>
       </div>
     </div>
   </section>
