--- a/src/app/lib/views/public/index/index.component.html
+++ b/src/app/lib/views/public/index/index.component.html
@@ -1,6 +1,5 @@
 <!-- index.component.html -->
 
-<!-- index.component.html -->
 <div class="relative h-screen overflow-hidden">
     <app-hero-slider />
 </div>
@@ -102,7 +101,7 @@
           <img
             class="w-48 md:w-56 lg:w-64 xl:w-72 2xl:w-80"
             alt="become a member"
-            src="/wpcworld.png"          
+            src="/icon-1.png"          
           />
         </div>
       
