--- a/src/app/lib/views/public/about/about.component.html
+++ b/src/app/lib/views/public/about/about.component.html
@@ -1,7 +1,7 @@
 <section class="py-16 bg-white contrast">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8 lg:flex lg:justify-start ">
         <!-- Header -->
-        <div class="text-start mb-12">
+        <div class="text-start mb-8">
             <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">About Us</h1>
 
             <div class="flex flex-col gap-6 text-gray-700  text-justify leading-relaxed">
@@ -20,55 +20,92 @@
                     these key pillars:
                 </p>
 
-                <ul class="space-y-4">
-                    <li class="flex items-start gap-3">
-                        <span class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500  flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white" class="w-3 h-3">
-                                <path fill-rule="evenodd"
-                                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </span>
-                        <span>Non Advocacy, non-political.</span>
-                    </li>
-                    <li class="flex items-start gap-3">
-                        <span class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500 flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white" class="w-3 h-3">
-                                <path fill-rule="evenodd"
-                                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </span>
-                        <span>Facilitating dialogue among stakeholders across the energy to address global energy
-                            issues.</span>
-                    </li>
-                    <li class="flex items-start gap-3">
-                        <span class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500 flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white" class="w-3 h-3">
-                                <path fill-rule="evenodd"
-                                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </span>
-                        <span>Promoting a realistic understanding of what is required for an effective energy
-                            transformation.</span>
-                    </li>
-                    <li class="flex items-start gap-3">
-                        <span class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500  flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white" class="w-3 h-3">
-                                <path fill-rule="evenodd"
-                                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </span>
-                        <span>Empowering Young Professionals for the future of the sector - Youth Forum.</span>
-                    </li>
-                </ul>
-                
+
+                <div
+                    class="container mx-auto flex flex-col gap-8 md:gap-12 lg:flex-row lg:items-stretch lg:justify-between text-justify leading-relaxed  sm:px-6 lg:px-8 lg:flex">
+
+                    <!-- Image Column -->
+                    <div class="flex flex-col justify-center lg:flex-1 lg:flex lg:items-center lg:justify-start">
+
+                        <div className=''>
+                            <!-- List Section -->
+                            <ul class="space-y-4 pace-y-4 flex-1">
+
+                                <li class="flex items-start gap-3">
+                                    <span
+                                        class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500 flex items-center justify-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white"
+                                            class="w-3 h-3">
+                                            <path fill-rule="evenodd"
+                                                d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                                                clip-rule="evenodd" />
+                                        </svg>
+                                    </span>
+                                    <span>Non Advocacy, non-political.</span>
+                                </li>
+                                <li class="flex items-start gap-3">
+                                    <span
+                                        class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500 flex items-center justify-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white"
+                                            class="w-3 h-3">
+                                            <path fill-rule="evenodd"
+                                                d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                                                clip-rule="evenodd" />
+                                        </svg>
+                                    </span>
+                                    <span>Facilitating dialogue among stakeholders across the energy sector to address
+                                        global energy issues.</span>
+                                </li>
+                                <li class="flex items-start gap-3">
+                                    <span
+                                        class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500 flex items-center justify-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white"
+                                            class="w-3 h-3">
+                                            <path fill-rule="evenodd"
+                                                d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                                                clip-rule="evenodd" />
+                                        </svg>
+                                    </span>
+                                    <span>Promoting a realistic understanding of what is required for an effective
+                                        energy transformation.</span>
+                                </li>
+                                <li class="flex items-start gap-3">
+                                    <span
+                                        class="flex-shrink-0 w-5 h-5 mt-1 bg-orange-500 flex items-center justify-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="white"
+                                            class="w-3 h-3">
+                                            <path fill-rule="evenodd"
+                                                d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                                                clip-rule="evenodd" />
+                                        </svg>
+                                    </span>
+                                    <span>Empowering Young Professionals for the future of the sector - Youth
+                                        Forum.</span>
+                                </li>
+                            </ul>
+
+
+                        </div>
+
+
+
+                    </div>
+
+                    <!-- Content Column -->
+                    <div class="lg:flex-1 lg:flex lg:flex-col lg:justify-between">
+
+                        <div className="mx-auto flex flex-col items-center gap-5">
+                            <img class="w-full md:w-full lg:w-full xl:w-72 2xl:w-full" alt="become a member"
+                                src="/sphere.jpg" />
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </section>
+
 
 <section class="pb-16  pt-0 bg-white">
     <div
@@ -77,11 +114,7 @@
         <!-- Image Column -->
         <div class="flex flex-col justify-center lg:flex-1 lg:flex lg:items-center lg:justify-start">
             <!-- <app-news-publications-slider /> -->
-
-            <img class="w-full md:w-full lg:w-full xl:w-72 2xl:w-full" alt="become a member" src="/Energy.jpg" />
-
-
-            <div className='py-8 py-5 text-gray-200'>
+            <div className='py-8 md:py-5 text-gray-200'>
                 <h4 class="font-semibold pt-5 text-lg mb-2 text-[#F36E23] "> WPC Energy Ghana </h4>
                 <!-- text-gray-600 -->
                 <div className="pt-5 flex flex-col justify-between gap-4 ">
@@ -173,14 +206,11 @@
                 </div>
             </div>
 
-
-
-
         </div>
 
         <!-- Content Column -->
         <div class="lg:flex-1 lg:flex lg:flex-col lg:justify-between">
-            <div>
+            <!-- <div>
                 <h2
                     class="text-[#F36E23] pb-4 border-b-2 border-gray-100 my-4 font-semibold text-xl lg:text-2xl text-left mx-0 md:mx-2 lg:mx-0">
                     Publications & News
@@ -210,7 +240,8 @@
 
 
 
-            </div>
+            </div> -->
+
             <div className="mx-auto pt-5 flex flex-col gap-5 text-[#333]">
                 <!-- <h3 className='text-2xl font-bold   '> WPC Energy World </h3> -->
                 <h4 class="font-semibold pt-5 text-lg mb-2 text-[#F36E23] "> WPC Energy World </h4>
@@ -226,19 +257,23 @@
 
                 </p>
                 <!-- <Link href="https://wpcenergy.org/"> -->
-                <button
-                    className="bg-[#F36E23] cursor-pointer text-white md:text-lg p-2 px-4 md:px-6 uppercase sm:flex">
-                    Read More
-                </button>
+                    <a href="https://wpcenergy.org/"
+                    class="inline-flex items-center text-orange-600 font-medium hover:text-blue-800 transition-colors">
+                    Learn more
+                    <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                    </svg>
+                </a>
                 <!-- </Link> -->
 
 
-                <div className='  py-4 '>
+                <!-- <div className='  py-4 '>
                     <p>
                         Through this mission and vision, WPC Energy Ghana aims to:
                     </p>
                     <ul className=' pl-3 custom-list py-4 '>
-                        <!-- {/* list-disc */} -->
+                        {/* list-disc */}
                         <li> Drive sustainable energy development that benefits all Ghanaians</li>
                         <li> Promote environmentally responsible practices in the oil and gas sector. </li>
                         <li> Promote environmentally responsible practices in the oil and gas sector.</li>
@@ -248,7 +283,7 @@
                         Ghana is dedicated to creating a future where energy
                         resources are used equitably and sustainably, ensuring
                         prosperity for current and future generations.</p>
-                </div>
+                </div> -->
 
             </div>
 
